tests/sksl/errors/OpaqueTypeInStruct.sksl
struct Bad { sampler x; };
uniform Bad b;
void main() {}
